# geodrive

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  docs.yml  tests.yml
docs/source/: conf.py  index.rst
docs/source/geodrive/: contributing.rst  examples.rst  getting_started.rst
docs/source/geodrive/api/: clients.rst  commands.rst  communicators.rst  index.rst  managers.rst  schemas.rst
scripts/shell/: build_docs.sh
src/geodrive/: schemas.py
src/geodrive/clients/: async_client.py  sync_client.py
src/geodrive/communicators/: base.py  grpc_async.py  grpc_sync.py
src/geodrive/managers/: __init__.py  async_movement.py  base.py  peripherals.py  sync_movement.py
src/web_ui/: websocket_control.py
src/web_ui/control_panel/: control_panel.html
src/web_ui/control_panel/css/: style.css
src/web_ui/control_panel/js/: configurator.js  main.js  map.js  telemetry.js  websocket.js
src/web_ui/game/: video_control_panel.html
src/web_ui/game/css/: video_style.css
src/web_ui/game/js/: video.js
src/web_ui/html/: control.js  control_panel.html  style.css  video.js  video_control.js  video_control_panel.html
