[project]
name = "geodrive"
version = "0.1.1"
description = "Universal SDK for rover programming"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Roman", email = "r.lazarev@geoscan.ru"}
]
keywords = ["geoscan", "geobot", "robot", "rover", "education", "grpc", "sdk", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "grpcio>=1.75.1",
    "protobuf>=6.32.1",
    "pydantic>=2.11.9",
    "structlog>=25.4.0",
]

[project.urls]
Homepage = "https://github.com/PunkNaPrekole/geodrive"
Documentation = "https://github.com/PunkNaPrekole/geodrive"
Repository = "https://github.com/PunkNaPrekole/geodrive"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project.optional-dependencies]
ws-control = [
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
docs = [
    "sphinx>=7.2.3",
    "sphinx-autodoc-typehints>=2.2.0",
    "sphinx-design>=0.6.1",
    "sphinx-material>=0.0.36",
]
test = [
    "pytest>=8.4.2",
]

